updated homepage in package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
-  "homepage": "https://darchie28.github.io/trvl/",
+  "homepage": "../https://darchie28.github.io/trvl/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
